--- a/app/globals.css
+++ b/app/globals.css
@@ -500,3 +500,123 @@
         grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
     }
 }
+
+.loading {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--point-color);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.loading .loading_wrap {
+}
+.loading .text_box {
+    display: flex;
+    white-space: pre-line;
+}
+.loading h1 span {
+    position: relative;
+    display: inline-block;
+    animation: bounce 0.6s ease-in-out alternate;
+    font-size: 80px;
+    color: #fff;
+    text-shadow: 0px 2px 8px #333;
+}
+
+.loading h1 span:nth-child(2) {
+    animation-delay: 0.1s;
+}
+.loading h1 span:nth-child(3) {
+    animation-delay: 0.2s;
+}
+.loading h1 span:nth-child(4) {
+    animation-delay: 0.3s;
+}
+.loading h1 span:nth-child(5) {
+    animation-delay: 0.4s;
+}
+.loading h1 span:nth-child(6) {
+    animation-delay: 0.5s;
+}
+.loading h1 span:nth-child(7) {
+    animation-delay: 0.6s;
+}
+.loading h1 span:nth-child(8) {
+    animation-delay: 0.7s;
+}
+
+@keyframes bounce {
+    0% {
+        opacity: 0;
+        top: -20px;
+    }
+    100% {
+        opacity: 1;
+        top: 0;
+    }
+}
+
+.loader:before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    height: 12px;
+    width: 12px;
+    border-radius: 12px;
+    animation: loaderg 3s ease-in-out infinite;
+}
+
+.loader {
+    position: relative;
+    width: 12px;
+    height: 12px;
+    top: 46%;
+    left: 46%;
+    border-radius: 12px;
+    background-color: var(--white-color);
+}
+
+.loader:after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    height: 12px;
+    width: 12px;
+    border-radius: 12px;
+    animation: loaderd 3s ease-in-out infinite;
+}
+
+@keyframes loaderg {
+    0% {
+        left: -25px;
+        background-color: rgba(255, 255, 255, 0.8);
+    }
+    50% {
+        left: 0px;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    100% {
+        left: -25px;
+        background-color: rgba(255, 255, 255, 0.8);
+    }
+}
+
+@keyframes loaderd {
+    0% {
+        left: 25px;
+        background-color: rgba(255, 255, 255, 0.8);
+    }
+    50% {
+        left: 0px;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    100% {
+        left: 25px;
+        background-color: rgba(255, 255, 255, 0.8);
+    }
+}
